--- a/projects/editor/src/lib/form/toolbar/toolbar.component.html
+++ b/projects/editor/src/lib/form/toolbar/toolbar.component.html
@@ -1,4 +1,5 @@
 <mat-button-toggle-group
+    class="editor-button-toggle-group"
     [value]="tabIndex"
     (valueChange)="tabIndexChange.emit($event)"
 >
