--- a/projects/editor/src/lib/tree-item/tree-item.component.html
+++ b/projects/editor/src/lib/tree-item/tree-item.component.html
@@ -20,9 +20,9 @@
             chevron_right
         </mat-icon>
     </button>
-    <span class="tree-item-header-content">
+    <div class="tree-item-header-content">
         <ng-content select="[headerContent]"></ng-content>
-    </span>
+    </div>
     <div
         *ngIf="hasOptions"
         class="tree-item-header-options"
