--- a/projects/editor/src/lib/edit-field/edit-field.component.html
+++ b/projects/editor/src/lib/edit-field/edit-field.component.html
@@ -2,12 +2,12 @@
     <mat-tab label="Properties">
         <div class="tree-container">
             <editor-object-property
-                [target]="activeFieldTarget"
-                [property]="activeFieldProperty"
+                [target]="field$ | async"
+                [property]="property$ | async"
                 [isSimplified]="true"
-                [isOverrideMode]="isOverrideMode"
+                [isOverrideMode]="isOverrideMode$ | async"
                 [isExpanded]="true"
-                (targetChanged)="fieldChanged.emit($event)"
+                (targetChanged)="onFieldChanged($event)"
             >
             </editor-object-property>
         </div>
@@ -15,9 +15,9 @@
     <mat-tab label="Styling">
         <div class="styling-wrapper">
             <editor-styles
-                [editField]="activeFieldTarget"
-                [parentField]="parentField"
-                (fieldChanged)="fieldChanged.emit($event)"
+                [editField]="field$ | async"
+                [parentField]="parentField$ | async"
+                (fieldChanged)="onFieldChanged($event)"
             >
             </editor-styles>
         </div>
