--- a/projects/editor/src/lib/tree-item/tree-item.component.scss
+++ b/projects/editor/src/lib/tree-item/tree-item.component.scss
@@ -1,3 +1,7 @@
+:host {
+    display: block;
+}
+
 .header {
     display: flex;
     min-height: var(--tree-item-height);
@@ -25,7 +29,7 @@
 
 .tree-item-header-content {
     flex-grow: 1;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     column-gap: 4px;
 }
