style(styles.scss): move editor styles to editor

--- a/projects/editor/src/lib/edit-field/styles/style-option/style-option.component.html
+++ b/projects/editor/src/lib/edit-field/styles/style-option/style-option.component.html
@@ -5,6 +5,7 @@
         (selectionChange)="onVariantSelected($event.value)"
     >
         <mat-option
+            class="editor-mat-option"
             *ngFor="let variant of option.variants"
             [value]="variant"
         >
