--- a/projects/editor/src/lib/edit-field/styles/styles.component.html
+++ b/projects/editor/src/lib/edit-field/styles/styles.component.html
@@ -1,7 +1,4 @@
-<mat-button-toggle-group
-    class="editor-button-toggle-group"
-    [(value)]="tabIndex"
->
+<mat-button-toggle-group [(value)]="tabIndex">
     <mat-button-toggle [value]="0">
         <mat-icon>person</mat-icon>
         <span>Style Self</span>
