--- a/projects/editor/src/lib/form/toolbar/toolbar.component.scss
+++ b/projects/editor/src/lib/form/toolbar/toolbar.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: var(--header-height);
+    height: var(--editor-header-height);
     padding: 0 8px;
     box-sizing: border-box;
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
