--- a/projects/editor/src/lib/property/boolean-property/boolean-property.component.html
+++ b/projects/editor/src/lib/property/boolean-property/boolean-property.component.html
@@ -46,6 +46,7 @@
 <mat-menu #optionsMenu="matMenu">
     <button
         *ngIf="property.isRemovable"
+        class="editor-mat-menu-item"
         mat-menu-item
         color="warn"
         (click)="remove.emit()"
