--- a/projects/editor/src/lib/property/property-key/property-key.component.scss
+++ b/projects/editor/src/lib/property/property-key/property-key.component.scss
@@ -1,6 +1,6 @@
 :host {
     display: inline-flex;
-    height: var(--tree-item-height);
+    height: var(--editor-tree-item-height);
     align-self: flex-start;
     align-items: center;
     column-gap: 4px;
