--- a/projects/editor/src/lib/sidebar/sidebar-section/sidebar-section.component.scss
+++ b/projects/editor/src/lib/sidebar/sidebar-section/sidebar-section.component.scss
@@ -28,7 +28,7 @@
 }
 
 .sidebar-header {
-    height: var(--header-height);
+    height: var(--editor-header-height);
     display: flex;
     align-items: center;
     column-gap: 8px;
