--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,13 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import 'codemirror/lib/codemirror';
-@import 'codemirror/theme/material';
-
-:root {
-    --header-height: 48px;
-    --tree-item-height: 32px;
-}
+@import '../projects/editor/src/styles.scss';
 
 html,
 body,
@@ -18,201 +12,4 @@ app-root {
 body {
     margin: 0;
     font-family: Roboto, 'Helvetica Neue', sans-serif;
-}
-
-formly-field {
-    display: block;
-}
-
-.cdk-drag-placeholder {
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    padding: 0 10px;
-    box-sizing: border-box;
-    background-color: #ebebeb;
-    border: dashed 2px #7a7a7a;
-    border-radius: 4px;
-}
-
-.grid .cdk-drag-placeholder {
-    display: none;
-}
-
-.cdk-drag-handle {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    cursor: move;
-}
-
-.cdk-drag-preview {
-    outline: dashed 2px #7a7a7a;
-    border-radius: 4px;
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
-        0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
-.cdk-drop-list.edit-mode {
-    min-height: 64px;
-    min-width: 48px;
-    padding: 8px;
-    box-sizing: border-box;
-    border: 2px solid transparent;
-}
-
-.cdk-drop-list-receiving.edit-mode,
-.cdk-drop-list-dragging.edit-mode {
-    background-color: #f7ffeb;
-    border: 2px solid #ebebeb;
-    border-radius: 4px;
-}
-
-.cdk-drop-list-dragging.edit-mode {
-    background-color: #beff5c;
-}
-
-.tree-container {
-    min-width: max-content;
-    padding: 8px;
-    box-sizing: border-box;
-}
-
-.tree-item {
-    display: block;
-    user-select: none;
-}
-
-.property-field {
-    flex-grow: 1;
-}
-
-button.mat-icon-button {
-    --button-size: 28px;
-    height: var(--button-size) !important;
-    width: var(--button-size) !important;
-    line-height: var(--button-size) !important;
-}
-
-.cursor-pointer {
-    cursor: pointer;
-}
-
-.expand-icon {
-    color: rgba(0, 0, 0, 0.54);
-    transition: transform 0.2s ease-out;
-}
-
-.expand-icon.expanded-90 {
-    transform: rotate(90deg);
-}
-
-.expand-icon.expanded-180 {
-    transform: rotate(-180deg);
-}
-
-.mat-button .mat-icon {
-    margin-right: 4px;
-}
-
-.mat-form-field-appearance-outline {
-    .mat-form-field-wrapper {
-        margin: 0 !important;
-        padding-bottom: 0 !important;
-    }
-
-    .mat-form-field-infix {
-        padding: 0.5em 0 !important;
-        border-top: none;
-    }
-
-    .mat-form-field-outline {
-        top: 0 !important;
-    }
-
-    .mat-form-field-flex {
-        margin-top: 0 !important;
-    }
-
-    .mat-form-field-label-wrapper {
-        top: -1.25em;
-        padding-top: 1.25em;
-    }
-
-    .mat-form-field-subscript-wrapper {
-        display: none;
-    }
-}
-
-.dialogBackdrop {
-    background-color: white;
-    opacity: 0.6 !important;
-}
-
-.hidden {
-    display: none !important;
-}
-
-editor-sidebar .resizing {
-    transition: none !important;
-}
-
-.override-indicator {
-    display: block;
-    height: 14px;
-    width: 6px;
-    background-color: #67cd13;
-    border-radius: 2px;
-}
-
-.overriden {
-    background-color: orange;
-}
-
-.override-clear-btn {
-    color: orange;
-}
-
-.CodeMirror {
-    // border: 1px solid rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-    padding: 4px;
-    box-sizing: border-box;
-}
-
-editor-edit-field {
-    .mat-expansion-panel {
-        border: 1px solid rgba(0, 0, 0, 0.12);
-        box-shadow: none !important;
-    }
-
-    .mat-form-field-wrapper {
-        margin-bottom: -1.25em;
-    }
-
-    .mat-form-field-infix {
-        width: unset;
-    }
-}
-
-.editor-mat-option {
-    line-height: 40px;
-    height: 40px;
-}
-
-.editor-button-toggle-group {
-    .mat-button-toggle {
-        flex-basis: 50%;
-        min-width: 120px;
-    }
-
-    .mat-button-toggle-label-content {
-        line-height: 32px;
-    }
-
-    .mat-icon {
-        margin-right: 4px;
-    }
 }
