--- a/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.html
+++ b/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.html
@@ -40,6 +40,7 @@
     <mat-menu #optionsMenu="matMenu">
         <button
             *ngIf="fieldInfo.canHaveChildren"
+            class="editor-mat-menu-item"
             mat-menu-item
             [matMenuTriggerFor]="addCategoryMenu"
         >
@@ -49,6 +50,7 @@
 
         <button
             *ngIf="fieldCategories.length"
+            class="editor-mat-menu-item"
             mat-menu-item
             [matMenuTriggerFor]="replaceCategoryMenu"
         >
@@ -57,6 +59,7 @@
         </button>
 
         <button
+            class="editor-mat-menu-item"
             mat-menu-item
             (click)="onRemove()"
         >
@@ -68,6 +71,7 @@
     <mat-menu #addCategoryMenu="matMenu">
         <ng-container *ngFor="let category of fieldCategories">
             <button
+                class="editor-mat-menu-item"
                 mat-menu-item
                 [matMenuTriggerFor]="addFieldMenu"
             >
@@ -76,6 +80,7 @@
 
             <mat-menu #addFieldMenu="matMenu">
                 <button
+                    class="editor-mat-menu-item"
                     mat-menu-item
                     *ngFor="let option of category.typeOptions"
                     (click)="onAddChildField(option.name, option.customName)"
@@ -89,6 +94,7 @@
     <mat-menu #replaceCategoryMenu="matMenu">
         <ng-container *ngFor="let category of fieldCategories">
             <button
+                class="editor-mat-menu-item"
                 mat-menu-item
                 [matMenuTriggerFor]="replaceFieldMenu"
             >
@@ -97,6 +103,7 @@
 
             <mat-menu #replaceFieldMenu="matMenu">
                 <button
+                    class="editor-mat-menu-item"
                     mat-menu-item
                     *ngFor="let option of category.typeOptions"
                     (click)="onReplaceField(option.name, option.customName)"
