--- a/projects/editor/src/lib/form/form.component.scss
+++ b/projects/editor/src/lib/form/form.component.scss
@@ -16,7 +16,7 @@
 }
 
 .tab-group {
-    height: calc(100% - var(--header-height));
+    height: calc(100% - var(--editor-header-height));
 }
 
 .categories-wrapper {
