--- a/projects/editor/src/lib/form/toolbar/toolbar.component.html
+++ b/projects/editor/src/lib/form/toolbar/toolbar.component.html
@@ -1,5 +1,4 @@
 <mat-button-toggle-group
-    class="editor-button-toggle-group"
     [value]="tabIndex"
     (valueChange)="tabIndexChange.emit($event)"
 >
@@ -36,6 +35,7 @@
 
 <mat-menu #optionsMenu="matMenu">
     <button
+        class="editor-mat-menu-item"
         mat-menu-item
         (click)="resetModel.emit()"
     >
@@ -43,6 +43,7 @@
         Reset Form
     </button>
     <button
+        class="editor-mat-menu-item"
         mat-menu-item
         (click)="duplicateForm.emit()"
     >
@@ -50,6 +51,7 @@
         Duplicate Form
     </button>
     <button
+        class="editor-mat-menu-item"
         mat-menu-item
         (click)="exportForm.emit()"
     >
@@ -57,6 +59,7 @@
         Export Form
     </button>
     <button
+        class="editor-mat-menu-item"
         mat-menu-item
         (click)="isExpanded = !isExpanded; toggleSidebars.emit(isExpanded)"
     >
