--- a/projects/editor/src/lib/tree-item/tree-item.component.scss
+++ b/projects/editor/src/lib/tree-item/tree-item.component.scss
@@ -4,7 +4,7 @@
 
 .header {
     display: flex;
-    min-height: var(--tree-item-height);
+    min-height: var(--editor-tree-item-height);
     position: relative;
     column-gap: 4px;
     align-items: center;
@@ -52,8 +52,4 @@
     position: absolute;
     height: 100%;
     border-left: 1px solid rgba(0, 0, 0, 0.12);
-}
-
-.children-container {
-    overflow: hidden;
 }
